# online_calib

./: CMakeLists.txt  buildAndRun.sh
config/: config.yaml
doc/: ReadMe.txt
include/: calibHandler.h  imgHandler.h  pcHandler.h
output/: edgeImg.pcd  edgeImgUsed.pcd  test.yml
src/: calibHandler.cpp  imgHandler.cpp  onlineCalib.cpp  pcHandler.cpp
test/: fusion.cpp  readImg.cpp  readPointCloud.cpp  writeYAML.cpp
